[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluesky-httpserver"
dynamic = ["version"]
description = "HTTP Server for communicating with Bluesky Queue Server"
readme = "README.rst"
requires-python = ">=3.7"
license = "BSD-3-Clause"
authors = [{ name = "Brookhaven National Laboratory" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "alembic",
  "bluesky-queueserver",
  "bluesky-queueserver-api",
  "cachetools",
  "fastapi",
  "httpx",
  "ldap3",
  "orjson",
  "pamela",
  "pydantic",
  "pydantic-settings",
  "python-jose",
  "pyzmq",
  "sqlalchemy",
  "starlette",
  "typing-extensions; python_version < '3.8'",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "black",
  "codecov",
  "coverage",
  "cryptography",
  "fastapi[all]",
  "flake8",
  "ipython",
  "isort",
  "matplotlib",
  "numpydoc",
  "pandas",
  "pre-commit",
  "py",
  "pytest",
  "pytest-asyncio",
  "pytest-xprocess",
  "requests",
  "respx",
  "sphinx",
  "sphinx_rtd_theme",
]

[project.scripts]
start-bluesky-httpserver = "bluesky_httpserver.server:start_server"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs", "tests"]

[tool.setuptools.dynamic]
version = { attr = "bluesky_httpserver.__version__" }

[tool.black]
line-length = 115
target-version = ['py37']
include = '\.pyi?$'
force-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | versioneer.py
)
'''
